--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.alain</groupId>
@@ -12,8 +11,10 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <github.global.server>github</github.global.server>
   </properties>
 
+	<!-- 
 	<repositories>
 		<repository>
 			<id>jboss</id>
@@ -26,9 +27,41 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	-->
+	
+	<scm>
+	    <url>https://github.com/algaute/activeMQ</url>
+	    <connection>scm:git:https://git@github.com/algaute/activeMQ.git</connection>
+	    <developerConnection>scm:git:https://git@github.com/algaute/activeMQ.git</developerConnection>
+	    <tag>master</tag>
+	</scm>	
+	
+	<developers>
+		<developer>
+			<email>algaute@gmail.com</email>
+			<name>Alain Gauthey</name>
+			<url>https://github.com/algaute</url>
+			<id>algaute</id>
+			<roles>
+		        <role>developer</role>
+		    </roles>
+		</developer>
+	</developers>
+	
+	<distributionManagement>
+	    <repository>
+			<id>internal</id>
+			<name>Internal Release Repository</name>
+      		<url>http://localhost:8090/repository/internal/</url>
+		</repository>
+	    <snapshotRepository>
+			<id>snapshots</id>
+			<name>Internal Snapshot Repository</name>
+      		<url>http://localhost:8090/repository/snapshots/</url>
+	    </snapshotRepository>
+	</distributionManagement>
 	
 	<build>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -37,11 +70,24 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-      			</configuration>
-   			</plugin>
-   		</plugins>
-   	</build>
-
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+        		<version>2.19.1</version>
+        	</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-scm-plugin</artifactId>
+		        <version>1.9.5</version>
+		        <configuration>
+					<goals>install</goals>
+		        </configuration>
+		      </plugin>
+		</plugins>
+	</build>	
+		
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
