--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         		<artifactId>maven-surefire-plugin</artifactId>
         		<version>2.19.1</version>
         	</plugin>
-			<plugin>
+			<!-- <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-scm-plugin</artifactId>
 		        <version>1.9.5</version>
@@ -85,6 +85,18 @@
 					<goals>install</goals>
 		        </configuration>
 		      </plugin>
+		      -->
+		      <plugin>
+      <artifactId>maven-release-plugin</artifactId>
+      <version>2.4.2</version>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.maven.scm</groupId>
+          <artifactId>maven-scm-provider-gitexe</artifactId>
+          <version>1.8.1</version>
+        </dependency>
+       </dependencies>
+      </plugin>
 		</plugins>
 	</build>	
 		
