--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.alain</groupId>
   <artifactId>activeMQ</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.4-SNAPSHOT</version>
   <packaging>war</packaging>
  
   <name>activeMQ</name> 
@@ -33,7 +33,7 @@
 	    <url>https://github.com/algaute/activeMQ</url>
 	    <connection>scm:git:https://git@github.com/algaute/activeMQ.git</connection>
 	    <developerConnection>scm:git:https://git@github.com/algaute/activeMQ.git</developerConnection>
-	    <tag>activeMQ-0.0.3</tag>
+	    <tag>master</tag>
 	</scm>	
 	
 	<developers>
