--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.alain</groupId>
   <artifactId>activeMQ</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <packaging>war</packaging>
  
   <name>activeMQ</name> 
@@ -77,26 +77,16 @@
         		<artifactId>maven-surefire-plugin</artifactId>
         		<version>2.19.1</version>
         	</plugin>
-			<!-- <plugin>
+        	<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-release-plugin</artifactId>
+		        <version>2.5.3</version>
+			</plugin>
+		    <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-scm-plugin</artifactId>
 		        <version>1.9.5</version>
-		        <configuration>
-					<goals>install</goals>
-		        </configuration>
-		      </plugin>
-		      -->
-		      <plugin>
-      <artifactId>maven-release-plugin</artifactId>
-      <version>2.4.2</version>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.maven.scm</groupId>
-          <artifactId>maven-scm-provider-gitexe</artifactId>
-          <version>1.8.1</version>
-        </dependency>
-       </dependencies>
-      </plugin>
+		    </plugin>
 		</plugins>
 	</build>	
 		
