--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,9 @@
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
 		        <version>2.5.3</version>
+		        <configuration>
+		        	<goals>deploy</goals>
+		        </configuration>
 			</plugin>
 		    <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
