--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 		        <artifactId>maven-release-plugin</artifactId>
 		        <version>2.5.3</version>
 		        <configuration>
-		        	<goals>deploy</goals>
+		        	<preparationGoals>clean verify -Parchiva</preparationGoals>
 		        </configuration>
 			</plugin>
 		    <plugin>
